--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,18 @@
 {% block content %}
 <div class="form-container">
     <h1>Login</h1>
+    {% if error %}
+    <div class="error-message">
+        <p>{{ error }}</p>
+    </div>
+    {% endif %}
+    {% if message %}
+    <div class="success-message">
+        <p>{{ message }}</p>
+    </div>
+    {% endif %}
     <form action="/" method="post" class="box">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="input__wrapper">
             <input type="text" name="username" id="username" placeholder="Username" class="input__field" required/>
         </div>
@@ -13,7 +24,7 @@
             <input type="submit" class="btn" value="Log In" />
         </div>
         <div class="form-footer">
-            <p>Don't have an account? <a href="?url=/signup.html">Sign up</a></p>
+            <p>Don't have an account? <a href="/signup.html">Sign up</a></p>
         </div>
     </form>
 </div>
