--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,8 +21,8 @@
                 <li><a href="?url=/">Home</a></li>
                 <li><a href="?url=/signup.html">Signup</a></li>
                 {% if state %}
-                    <li><a href="?url=/success.html">Success</a></li>
-                    <li><a href="?url=/">Logout</a></li>
+                    <li><a href="/success.html">Success</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 {% endif %}
             </ul>
         </nav>
