--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,6 @@
     {% block content %}{% endblock %}
     <script src="static/js/serviceWorker.js"></script>
     <script src="static/js/app.js"></script>
-    <!-- Security issue: Using an insecure external script source -->
-    <!-- <script src="https//getfreebootstrap.ru/bootstrap.js"></script> -->
+    <script src="static/js/passwordValidator.js"></script>
 </body>
 </html>
