--- a/templates/verify_2fa.html
+++ b/templates/verify_2fa.html
@@ -9,7 +9,8 @@
     {% endif %}
     <p>To complete your login, please enter the 6-digit code from your authenticator app.</p>
     
-    <form action="/verify_login_2fa" method="POST" class="box">
+    <form action="/verify_login_2fa" method="POST" class="box" id="verify-form">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <input type="hidden" name="username" value="{{ username }}">
         <div class="input__wrapper">
             <label for="token">Authentication Code:</label>
