--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
         <p>{{ message }}</p>
     </div>
     {% endif %}
-    <form action="/" method="POST" class="box">
+    <form action="/" method="POST" class="box" id="login-form">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="input__wrapper">
             <input type="text" name="username" id="username" placeholder="Username" class="input__field" required/>
         </div>
