--- a/templates/success.html
+++ b/templates/success.html
@@ -9,7 +9,8 @@
     {% endif %}
     <div class="form-container">
         <h2>Share Your Feedback</h2>
-        <form action="/success.html" method="POST" class="box">
+        <form action="/success.html" method="POST" class="box" id="feedback-form">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="input__wrapper">
                 <textarea name="feedback" id="feedback" placeholder="Enter your feedback here" class="input__field" rows="4" required></textarea>
             </div>
